# Pixia-Backend

./: .dockerignore  .env.exemple  .gitignore  CHAT_ROUTE_IMPROVEMENTS.md  CHECKLIST_VALIDATION.md  DEBUG_GUIDE.md  Dockerfile  EXAMPLES_USAGE.py  Hackathon.code-workspace  MIGRATION_GUIDE.md  OPTIMIZATIONS_SUMMARY.py  README.md  REFACTORING_SUMMARY.py  TEST_DEBUG.py  TODO.md  VIEW_COURSE.py  copilote.py  course_output.html  pyproject.toml  qcm_test.py  requirements.txt
scripts/: dev.sh  prod.sh
src/: __init__.py  config.py
src/app/: config.py  main.py
src/bdd/: __init__.py  dbmanager.py  query.py  schema_sql.py  test_crea_bdd.py
src/dto/: __init__.py  changesettings.py  chat.py  correctplainquestion.py  deletechapter.py  deletechat.py  dto.md  fetchallchats.py  fetchchat.py  fetchexercise.py  login.py  markchapter.py  markcorrectedQCM.py  renamechapter.py  renamechat.py  signup.py
src/mcp_tools/: generate_mermaid.py
src/models/: __init__.py  conversational_models.py  cours_models.py  deepcourse_models.py  evaluation_models.py  exercise_models.py  import_fichier_model.py  pdf_qa_models.py  pdf_summary_models.py  tool_models.py
src/prompts/: __init__.py  conversational_prompt.py  copilote_prompt.py  cours_prompt.py  deepcourse_prompt.py  diagram_agents_prompts.py  diagram_prompts.py  exercises_prompt.py  normal_agent_prompt.py  orchestrator_prompt.py  utils_prompt.py
src/tools/: __init_.py
src/utils/: __init__.py  context_builder.py  correct_plain_question.py  cours_utils.py  cours_utils_quad_llm.py  cours_utils_quad_llm_integration.py  cours_utils_v2.py  deepcourse_utils.py  diagram_type_selector.py  exercises_utils.py  gcp_credentials.py  gemini_files.py  generate_title.py  (+10 more)
test_agents/: agent.py
test_courses/: courses.py  mermaid_function.py
test_exercises/: plain_text_test.py  qcm_test.py  test_final.py  test_planner.py
(+63 files in other folders)
